environments/dev/kubernetes/services/utils/fluentd-logging.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd-logging
  labels:
    app: fluentd-logging
    env: dev
  namespace: utils
spec:
  selector:
    matchLabels:
      name: fluentd-logging
  template:
    metadata:
      name: fluentd-logging
      labels:
        env: dev
        name: fluentd-logging
      annotations:
        steblynskyi.io/inject-secret: "true"
    spec:
      imagePullSecrets:
      - name: steblynskyi
      containers:
      - name: fluentd-logging
        image: steblynskyi-docker.jfrog.io/devops-logging:v1.0.3
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 24224
          protocol: TCP
        securityContext:
          privileged: true
        volumeMounts:
          - name: varlog
            mountPath: /var/log
          - name: docker
            mountPath: /var/lib/docker/containers
            readOnly: true
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: docker
        hostPath:
          path: /var/lib/docker/containers
