environments/dev/kubernetes/services/utils/confidant-keeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  confidant-keeper
  labels:
    app: confidant-keeper
    env: dev
  namespace: utils
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confidant-keeper
  revisionHistoryLimit: 1
  template:
    metadata:
      name: confidant-keeper
      labels:
        env: dev
        app: confidant-keeper
      annotations:
        steblynskyi.io/inject-secret: "true"
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: confidant-keeper
        image: lyft/confidant:6.3.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 8000
          name: http
        args:
        - confidant.wsgi:app
        - --workers=2
        - -k
        - gevent
        - --access-logfile=-
        - --error-logfile=-
        - --forwarded-allow-ips=*
        command:
        - gunicorn
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: confidant-keeper
  namespace: utils
  labels:
    Domain: utils-confidant-keeper.dev-steblynskyi.com
spec:
  selector:
    app: confidant-keeper
    env: dev
  ports:
  - port: 443
    name: https
    targetPort: 8000
    protocol: TCP
  type: NodePort
