environments/dev/kubernetes/services/utils/ops-saml-vending.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ops-saml-vending
  labels:
    app: ops-saml-vending
    env: dev
  namespace: utils
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ops-saml-vending
  revisionHistoryLimit: 1
  template:
    metadata:
      name: ops-saml-vending
      labels:
        env: dev
        app: ops-saml-vending
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: ops-saml-vending
        image: steblynskyi-docker.jfrog.io/ops-saml-vending:35fc17
        imagePullPolicy: Always
        resources:
          requests:
              cpu: 50m
              memory: 64Mi
          limits:
              cpu: 250m
              memory: 256Mi
        ports:
        - containerPort: 5000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: ops-saml-vending
  namespace: utils
  labels:
    Domain: utils-vending-saml-ops.dev-steblynskyi.com
spec:
  selector:
    app: ops-saml-vending
    env: dev
  ports:
  - port: 80
    name: http
    targetPort: 5000
    protocol: TCP
  type: NodePort
