environments/dev/kubernetes/services/utils/UTILS-INGRESS-INTERNAL.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: utils-ingress-internal
  namespace: utils
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/target-node-labels: kops.k8s.io/instancegroup=nodes
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/tags: Environment=DEV,Name=Utils-Ingress-Internal
    alb.ingress.kubernetes.io/subnets: subnet-1,subnet-2
    alb.ingress.kubernetes.io/security-groups: sg-1
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:123:certificate/111-222-333-444-55555
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=false,access_logs.s3.bucket=steblynskyi-dev-access-logs,access_logs.s3.prefix=utils,deletion_protection.enabled=true,routing.http2.enabled=true,idle_timeout.timeout_seconds=120
spec:
  rules:
  - host: utils-communication-email-ses.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: communication-email-ses
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: utils-communication-template-api.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: communication-template-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: utils-highcharts-export.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: highcharts-export
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: utils-vending-saml-ops.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: ops-saml-vending
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: utils-roadmap-api.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: roadmap-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: utils-roadmap-web.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: roadmap-web
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: utils-proxy-logging.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: proxy-logging
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: utils-test-coverage-web.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: test-coverage-web
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: utils-swagger-editor.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: swagger-editor
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: utils-swagger-ui.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: swagger-ui
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: utils-qa-token-api.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: qa-token-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: utils-folio-automated-test-web.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: folio-automated-test-web
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: utils-folio-automated-test-web-api.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: folio-automated-test-web-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: utils-selenium-chrome.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: selenium-chrome
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: utils-confidant-keeper.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: confidant-keeper
            port:
              number: 443
        path: /*
        pathType: ImplementationSpecific
